--- a/app/src/main/res/layout/activity_calender.xml
+++ b/app/src/main/res/layout/activity_calender.xml
@@ -4,197 +4,224 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CalenderActivity" >
+    tools:context=".CalenderActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/LinearLayout01"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#A758AB"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="15dp" >
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:background="#ff7fc4"
+        android:gravity="center">
 
         <TextView
             android:id="@+id/TextView07"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="2dp"
-            android:text="Android From Home"
+            android:text="@string/CalendarTitle"
             android:textColor="#ffffff"
-            android:textSize="22dp"
+            android:textSize="22sp"
             android:textStyle="bold" />
-    </LinearLayout>
+    </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
         android:layout_margin="4dp"
-        android:background="#343434"
-        android:orientation="vertical" >
+        android:background="#4b4b4b"
+        android:layout_weight="0.7">
 
         <LinearLayout
-            android:id="@+id/header"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="#78C165"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="10dp" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <FrameLayout
-                android:layout_width="45dp"
-                android:layout_height="45dp" >
-
-                <ImageButton
-                    android:id="@+id/ib_prev"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/button1" />
-
-            </FrameLayout>
-
-            <FrameLayout
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/header"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:background="#ff6dbc"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <FrameLayout
+                    android:layout_width="45dp"
+                    android:layout_height="45dp">
+
+                    <ImageButton
+                        android:id="@+id/ib_prev"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="2dp"
+                        android:background="@drawable/arrow_left"
+                        android:contentDescription="@string/arrowLeft" />
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/tv_month"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dip"
+                        android:gravity="center"
+                        android:text="01/2016"
+                        android:textColor="#ffffff"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="45dp"
+                    android:layout_height="45dp">
+
+                    <ImageButton
+                        android:id="@+id/Ib_next"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
+                        android:background="@drawable/arrow_right"
+                        android:contentDescription="@string/arrowRight" />
+
+                </FrameLayout>
+            </LinearLayout>
+
+            <TableRow
+                android:id="@+id/tableRow1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:paddingLeft="2dp"
+                android:paddingRight="2dp"
+                android:paddingTop="6dp">
 
                 <TextView
-                    android:id="@+id/tv_month"
+                    android:id="@+id/TextView06"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dip"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:text="January"
-                    android:textColor="#ffffff"
-                    android:textSize="18dip"
-                    android:textStyle="bold" />
+                    android:text="@string/Sunday"
+                    android:textColor="#ffffff" />
 
-            </FrameLayout>
-
-            <FrameLayout
-                android:layout_width="45dp"
-                android:layout_height="45dp" >
-
-                <ImageButton
-                    android:id="@+id/Ib_next"
+                <TextView
+                    android:id="@+id/TextView05"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/button4" />
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/Monday"
+                    android:textColor="#ffffff" />
 
-            </FrameLayout>
+                <TextView
+                    android:id="@+id/TextView04"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/Tuesday"
+                    android:textColor="#ffffff" />
+
+                <TextView
+                    android:id="@+id/TextView03"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/Wednesday"
+                    android:textColor="#ffffff" />
+
+                <TextView
+                    android:id="@+id/TextView02"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/Thursday"
+                    android:textColor="#ffffff" />
+
+                <TextView
+                    android:id="@+id/TextView01"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/Friday"
+                    android:textColor="#ffffff" />
+
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="@string/Saturday"
+                    android:textColor="#ffffff" />
+
+            </TableRow>
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#dfdfdf"
+                android:padding="2dp" />
+
+            <GridView
+                android:id="@+id/gv_calendar"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:background="#00000000"
+                android:cacheColorHint="#80000000"
+                android:gravity="center"
+                android:listSelector="@android:color/transparent"
+                android:numColumns="7"
+                android:padding="2dp"
+                android:stretchMode="columnWidth"
+                android:textAlignment="gravity">
+
+            </GridView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="#343434"
+                android:orientation="vertical">
+
+            </LinearLayout>
+
+
         </LinearLayout>
+    </RelativeLayout>
 
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="5dp"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
-            android:paddingTop="6dp" >
-
-            <TextView
-                android:id="@+id/TextView06"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="S"
-                android:textColor="#ffffff" />
-
-            <TextView
-                android:id="@+id/TextView05"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="M"
-                android:textColor="#ffffff" />
-
-            <TextView
-                android:id="@+id/TextView04"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="T"
-                android:textColor="#ffffff" />
-
-            <TextView
-                android:id="@+id/TextView03"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="W"
-                android:textColor="#ffffff" />
-
-            <TextView
-                android:id="@+id/TextView02"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="T"
-                android:textColor="#ffffff" />
-
-            <TextView
-                android:id="@+id/TextView01"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="F"
-                android:textColor="#ffffff" />
-
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="S"
-                android:textColor="#ffffff" />
-
-        </TableRow>
+    <RelativeLayout
+        android:id="@+id/LinearLayout03"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.25"
+        android:background="#ffcbe7"
+        android:gravity="center"
+        android:padding="15dp">
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#dfdfdf"
-            android:padding="2dp" />
-
-        <GridView
-            android:id="@+id/gv_calendar"
-            android:layout_width="fill_parent"
+            android:id="@+id/TextView_Note"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#00000000"
-            android:cacheColorHint="#80000000"
-            android:gravity="center"
-            android:listSelector="@android:color/transparent"
-            android:numColumns="7"
             android:padding="2dp"
-            android:stretchMode="columnWidth"
-            android:textAlignment="gravity" >
+            android:text="@string/Notes"
+            android:textColor="#ffffff"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
-        </GridView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="#343434"
-            android:orientation="vertical" >
-
-        </LinearLayout>
-
-    </LinearLayout>
-
+    </RelativeLayout>
 </LinearLayout>
 
 
