--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -4,10 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="6dp"
+    android:paddingLeft="6dp"
+    android:paddingRight="6dp"
+    android:paddingTop="6dp"
+
     tools:context="com.mypuredays.mypuredays.StatusActivity">
 
     <LinearLayout
@@ -26,8 +27,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp"/>
+            android:layout_gravity="center"
+            android:layout_marginLeft="15dp"
+            android:textStyle="bold"/>
         <TextView
             android:id="@+id/LABEL_lastPeriodDate"
             android:layout_width="fill_parent"
@@ -36,8 +38,11 @@
             android:text="@string/lastPeriodDate"
             android:textSize="20dp"
             android:textIsSelectable="false"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"/>
+            android:layout_marginRight="15dp"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -58,10 +63,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="20dp"
-            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
-            android:text="--"/>
+            android:text="--"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/LABEL_cleanCount"
@@ -71,8 +77,9 @@
             android:text="@string/cleanCount"
             android:layout_marginBottom="10dp"
             android:textSize="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"/>
+            android:layout_gravity="center"
+            android:layout_marginRight="15dp"
+            android:textStyle="bold"/>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/LAYOUT_dateMikveh"
@@ -89,9 +96,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="20dp"
-            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
             android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginLeft="15dp"
+            android:textStyle="bold"/>
         <TextView
             android:id="@+id/LABEL_dateMikveh"
             android:layout_width="fill_parent"
@@ -99,8 +107,9 @@
             android:layout_weight="1"
             android:text="@string/dateMikveh"
             android:textSize="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"/>
+            android:layout_gravity="center"
+            android:layout_marginRight="15dp"
+            android:textStyle="bold"/>
     </LinearLayout>
 
     <LinearLayout
@@ -119,9 +128,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="20dp"
-            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
             android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginLeft="15dp"
+            android:textStyle="bold"/>
         <TextView
             android:id="@+id/LABEL_periodLength"
             android:layout_width="fill_parent"
@@ -129,8 +139,9 @@
             android:layout_weight="1"
             android:text="@string/periodLength"
             android:textSize="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"/>
+            android:layout_gravity="center"
+            android:layout_marginRight="15dp"
+            android:textStyle="bold"/>
 
 
     </LinearLayout>
@@ -153,7 +164,8 @@
             android:textSize="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginLeft="15dp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/LABEL_periodAvg"
@@ -162,8 +174,9 @@
             android:layout_weight="1"
             android:text="@string/periodAvg"
             android:textSize="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"/>
+            android:layout_gravity="center"
+            android:layout_marginRight="15dp"
+            android:textStyle="bold"/>
 
 
     </LinearLayout>
@@ -189,7 +202,8 @@
             android:textSize="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginLeft="15dp"
+            android:textStyle="bold"/>
         <TextView
             android:id="@+id/LABEL_prishaDate"
             android:layout_width="fill_parent"
@@ -198,7 +212,8 @@
             android:text="@string/prishaDate"
             android:textSize="20dp"
             android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"/>
+            android:layout_marginRight="15dp"
+            android:textStyle="bold"/>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/LAYOUT_nextPeriodDate"
@@ -218,7 +233,8 @@
             android:textSize="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginLeft="15dp"
+            android:textStyle="bold"/>
         <TextView
             android:id="@+id/LABEL_nextPeriodDate"
             android:layout_width="fill_parent"
@@ -227,7 +243,8 @@
             android:text="@string/nextPeriodDate"
             android:textSize="20dp"
             android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"/>
+            android:layout_marginRight="15dp"
+            android:textStyle="bold"/>
     </LinearLayout>
 
 </LinearLayout>
