--- a/app/src/main/res/layout/activity_dialog_calendar.xml
+++ b/app/src/main/res/layout/activity_dialog_calendar.xml
@@ -17,7 +17,7 @@
         android:text="@string/btDialogEnd"/>
     <EditText
         android:inputType="text"
-        android:id="@+id/text"
+        android:id="@+id/dialogNote"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFF"/>
