--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -23,6 +23,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:layout_gravity="center"
             android:visibility="visible"
             android:textOff="OFF"
             android:textOn="ON"/>
@@ -34,7 +35,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:textStyle="bold"
             android:layout_weight="1"/>
@@ -54,6 +55,7 @@
             android:id="@+id/spinner_day_period_min"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"
             android:layout_weight="1"/>
@@ -64,7 +66,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:textStyle="bold"
             android:layout_weight="1"
@@ -87,6 +89,7 @@
             android:id="@+id/spinner_period_during"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"
             android:layout_weight="1"/>
@@ -97,7 +100,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:textStyle="bold"
             android:layout_weight="1"/>
@@ -123,6 +126,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:layout_gravity="center"
             android:visibility="visible"
             android:textOff="OFF"
             android:textOn="ON"/>
@@ -134,7 +138,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:textStyle="bold"
             android:layout_weight="1"/>
@@ -155,6 +159,7 @@
             android:id="@+id/spinner_reminder_pure_day"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"
             android:layout_weight="1"/>
@@ -165,7 +170,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:textStyle="bold"
             android:layout_weight="1" />
@@ -186,6 +191,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:layout_gravity="center"
             android:visibility="visible"
             android:textOff="OFF"
             android:textOn="ON"/>
@@ -196,7 +202,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:textStyle="bold"
             android:layout_weight="1"/>
@@ -217,6 +223,7 @@
             android:id="@+id/spinner_type_period"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"
             android:layout_weight="1"/>
@@ -227,7 +234,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:textStyle="bold"
             android:layout_weight="1" />
@@ -249,6 +256,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:layout_gravity="center"
             android:visibility="visible"
             android:textOff="OFF"
             android:textOn="ON"/>
@@ -260,7 +268,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
             android:layout_marginRight="10dp"
             android:textStyle="bold"
             android:layout_weight="1"/>
