update onaType in BL switch prisha and  spinner ona definition activity

--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -211,6 +211,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linear_layout_type_period"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
