--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -217,6 +217,7 @@
         android:layout_height="fill_parent"
         android:background="@drawable/square_button6"
         android:layout_marginBottom="5dp"
+        android:visibility="gone"
         android:layout_weight="1">
 
 
