--- a/app/src/main/res/layout/activity_calender.xml
+++ b/app/src/main/res/layout/activity_calender.xml
@@ -176,15 +176,19 @@
 
             <GridView
                 android:id="@+id/gv_calendar"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:background="#00000000"
                 android:cacheColorHint="#80000000"
                 android:gravity="center"
                 android:listSelector="@android:color/transparent"
                 android:numColumns="7"
                 android:padding="2dp"
-                android:stretchMode="columnWidth">
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="2dp"
+                android:horizontalSpacing="2dp"
+
+                >
 
             </GridView>
 
