--- a/app/src/main/res/layout/activity_calender.xml
+++ b/app/src/main/res/layout/activity_calender.xml
@@ -43,7 +43,8 @@
                 android:background="#ff6dbc"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:padding="10dp"
+                android:baselineAligned="false">
 
                 <FrameLayout
                     android:layout_width="45dp"
@@ -187,19 +188,13 @@
                 android:stretchMode="columnWidth"
                 android:verticalSpacing="2dp"
                 android:horizontalSpacing="2dp"
-
-                >
-
-            </GridView>
+               />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:background="#343434"
-                android:orientation="vertical">
-
-            </LinearLayout>
-
+                android:orientation="vertical"/>
 
         </LinearLayout>
     </RelativeLayout>
