--- a/app/src/main/res/layout/cal_item.xml
+++ b/app/src/main/res/layout/cal_item.xml
@@ -31,7 +31,8 @@
             android:id="@+id/date_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:visibility="gone"
+            android:scaleType="fitEnd"/>
 
     </LinearLayout>
 
