--- a/app/src/main/res/layout/activity_dialog_calendar.xml
+++ b/app/src/main/res/layout/activity_dialog_calendar.xml
@@ -20,7 +20,7 @@
         android:id="@+id/dialogNote"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textColor="#FFF"/>
+        android:textColor="#000"/>
     />
     <Button
         android:id="@+id/dialogButtonSaveNote"
