--- a/app/src/main/res/layout/activity_calender.xml
+++ b/app/src/main/res/layout/activity_calender.xml
@@ -10,7 +10,7 @@
         android:id="@+id/LinearLayout01"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.1"
+        android:layout_weight="0.05"
         android:background="#ff7fc4"
         android:gravity="center">
 
@@ -29,7 +29,7 @@
         android:layout_height="0dp"
         android:layout_margin="4dp"
         android:background="#4b4b4b"
-        android:layout_weight="0.7">
+        android:layout_weight="0.8">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -203,7 +203,7 @@
         android:id="@+id/LinearLayout03"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.25"
+        android:layout_weight="0.15"
         android:background="#ffcbe7"
         android:gravity="center"
         android:padding="15dp">
@@ -214,7 +214,7 @@
             android:layout_height="wrap_content"
             android:padding="2dp"
             android:text="@string/Notes"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:textSize="22sp"
             android:textStyle="bold" />
 
