--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,9 @@
 
     <ImageView
         android:id="@+id/iconclear"
-        android:layout_width="163dp"
-        android:layout_height="241dp"
-        android:background="@drawable/iconclear"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:background="@drawable/icon"
         android:scaleType="fitCenter"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -62,7 +62,7 @@
         android:layout_below="@+id/iconclear"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="100dp"
         android:onClick="openStatus" />
 
 
