--- a/app/src/main/res/layout/cal_item.xml
+++ b/app/src/main/res/layout/cal_item.xml
@@ -1,41 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="#343434"
     android:gravity="center"
-    android:orientation="vertical"
-    android:padding="4dp" >
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="1dp" >
-
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:gravity="center_vertical"
-            android:padding="2dp"
-            android:textColor="#000000"
-            android:textSize="14dip"
-            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/date_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:scaleType="fitEnd"/>
+            android:background="@drawable/clear_circle"
+            android:layout_centerInParent="true"
+            android:scaleType="fitXY"
+            />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="#000000"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
-</LinearLayout>
+</RelativeLayout>
 
 
