--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -56,9 +56,10 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"
-            android:layout_weight="1"/>
+            android:layout_weight="2"/>
 
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -90,9 +91,10 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"
-            android:layout_weight="1"/>
+            android:layout_weight="2"/>
 
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -150,6 +152,8 @@
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:id="@+id/linear_reminder_pure_day"
+        android:visibility="gone"
         android:background="@drawable/square_button6"
         android:layout_marginBottom="5dp"
         android:layout_weight="1">
@@ -160,9 +164,10 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"
-            android:layout_weight="1"/>
+            android:layout_weight="1.2"/>
 
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -226,9 +231,10 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"
-            android:layout_weight="1"/>
+            android:layout_weight="1.4"/>
 
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -246,6 +252,7 @@
 
 
     <LinearLayout
+        android:id="@+id/linear_mikve_reminder_day"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
