--- a/app/src/main/res/layout/activity_calender.xml
+++ b/app/src/main/res/layout/activity_calender.xml
@@ -205,7 +205,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.15"
         android:background="#ffcbe7"
-        android:gravity="center"
+        android:gravity="right"
         android:padding="15dp">
 
         <TextView
